# autowiki

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  openclaw.plugin.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/workflows/: ci.yml
.opencode/: INSTALL.md
autowiki/: __init__.py  _navigate.py  cli.py  index.py  ingest.py  lint.py  query.py  state.py  validate.py  wiki.py
docs/: CHUNKING.md  CROSS_AGENT.md  SKILLS_ECOSYSTEM.md  USER_SCENARIO.md  architecture-overview.html
skills/autowiki/: SKILL.md
skills/autowiki-chunk/: SKILL.md
skills/autowiki-index/: SKILL.md
skills/autowiki-ingest/: SKILL.md
skills/autowiki-init/: SKILL.md
skills/autowiki-query/: SKILL.md
skills/autowiki-validate/: SKILL.md
skills/autowiki/references/: micro-skill.md  navigate-template.md  page-template.md  raw-template.md  validation-example.md
skills/autowiki/scripts/: autowiki.py
tests/: test_core.py  test_state.py  test_stuck_watchdog.py
